# ViperChess

./: AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
src/: board.cpp  board.hpp  book.cpp  book.hpp  eval.cpp  eval.hpp  magic_bits.hpp  main.cpp  movegen.cpp  movegen.hpp  search.cpp  search.hpp  syzygy.cpp  syzygy.hpp  uci.cpp  uci.hpp
